finally fixin overlap issue with edit/recurrence multiples override on filter change

--- a/src/app/add-expense/page.css
+++ b/src/app/add-expense/page.css
@@ -18,11 +18,6 @@ main#expensePage {
   right: 10em;
 }
 
-.section:has(.recurringEdit) .filter,
-.section:has(.expenseEdit) .filter {
-  display: none;
-}
-
 .headerWrapper {
   display: flex;
   justify-content: space-between;
